# career-copilot-agent

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Caddyfile  Dockerfile  Makefile  README.md  RUNBOOK.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  prometheus.yml  pyproject.toml  render-start.sh  render.yaml  requirements.txt
.github/workflows/: ci-cd.yml
app/: main.py
app/api/: deps.py  middleware.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  chat.py  health.py  tickets.py
app/core/: config.py  limiter.py  logging.py  metrics.py  security.py  tracing.py
app/core/guardrails/: __init__.py  input_guard.py  output_guard.py  pii.py
app/core/langgraph/: graph.py  state.py
app/core/langgraph/agents/: __init__.py  common.py  draft.py  escalation.py  job_search.py  knowledge.py  supervisor.py  triage.py
app/core/langgraph/tools/: __init__.py  job_search.py  kb_search.py  salary.py
app/core/prompts/: __init__.py
app/models/: __init__.py  kb.py  ticket.py  user.py
app/schemas/: auth.py  chat.py
app/services/: database.py  embeddings.py  llm.py  retrieval.py
app/utils/: chunking.py
data/knowledge_base/: ats_resumes.md  career_growth.md  common_interview_questions.md  cover_letters.md  informational_interviews.md  interview_types.md  job_search_foundations.md  job_search_strategy.md  linkedin_networking.md  references_offers.md  remote_work.md  resume_writing.md  salary_negotiation.md  star_interviews.md
docs/: architecture.md  deployment.md  evaluation.md  getting-started.md  guardrails.md  langfuse.md  render-quickstart.md
evals/: __init__.py  common.py  guardrail_eval.py  ragas_eval.py  routing_eval.py  run_all.py
evals/golden/: guardrail_cases.jsonl  rag_golden.jsonl  rag_golden_sample.jsonl  routing_golden.jsonl  routing_golden_sample.jsonl
frontend/: Dockerfile  README.md  render-start.sh  requirements.txt  streamlit_app.py
grafana/dashboards/: support_desk.json
migrations/: env.py  script.py.mako
migrations/versions/: 0001_baseline.py
scripts/: ingest_kb.py  seed_users.py
tests/: conftest.py
tests/integration/: test_api_smoke.py
tests/unit/: test_agent_history.py  test_config_security.py  test_guardrails.py  test_llm_service.py  test_retrieval_fusion.py  test_tools.py  test_tracing.py
